gitops/cluster-apps/avelin/zero/zero-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: avelin-zero
  namespace: avelin
  labels:
    app: avelin-zero
spec:
  selector:
    app: avelin-zero
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4848
