gitops/cluster-apps/avelin/zero/zero-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: avelin-zero
spec:
  parentRefs:
    - kind: Gateway
      name: avelin-gateway
      namespace: infra
  hostnames:
    - zero.avelin.app
  rules:
    - backendRefs:
        - name: avelin-zero
          port: 80
